; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/netstat/extr_main.c_kresolve_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/netstat/extr_main.c_kresolve_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nlist = type { i64 }

@kvmd = common dso_local global i32* null, align 8
@nlistf = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"%s: kvm_nlist: %s\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"kvm_nlist: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nlist*)* @kresolve_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kresolve_list(%struct.nlist* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nlist*, align 8
  store %struct.nlist* %0, %struct.nlist** %3, align 8
  %4 = load i32*, i32** @kvmd, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = call i64 (...) @kvmd_init()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 -1, i32* %2, align 4
  br label %37

10:                                               ; preds = %6, %1
  %11 = load %struct.nlist*, %struct.nlist** %3, align 8
  %12 = getelementptr inbounds %struct.nlist, %struct.nlist* %11, i64 0
  %13 = getelementptr inbounds %struct.nlist, %struct.nlist* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %37

17:                                               ; preds = %10
  %18 = load i32*, i32** @kvmd, align 8
  %19 = load %struct.nlist*, %struct.nlist** %3, align 8
  %20 = call i64 @kvm_nlist(i32* %18, %struct.nlist* %19)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %36

22:                                               ; preds = %17
  %23 = load i64, i64* @nlistf, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load i64, i64* @nlistf, align 8
  %27 = trunc i64 %26 to i32
  %28 = load i32*, i32** @kvmd, align 8
  %29 = call i32 @kvm_geterr(i32* %28)
  %30 = call i32 (i32, i8*, i32, ...) @xo_errx(i32 1, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %29)
  br label %35

31:                                               ; preds = %22
  %32 = load i32*, i32** @kvmd, align 8
  %33 = call i32 @kvm_geterr(i32* %32)
  %34 = call i32 (i32, i8*, i32, ...) @xo_errx(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %31, %25
  br label %36

36:                                               ; preds = %35, %17
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %16, %9
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i64 @kvmd_init(...) #1

declare dso_local i64 @kvm_nlist(i32*, %struct.nlist*) #1

declare dso_local i32 @xo_errx(i32, i8*, i32, ...) #1

declare dso_local i32 @kvm_geterr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
